[GTK] editing/deleting/5408255.html results are incorrect https://bugs.webkit.org/show_bug.cgi?id=53644

Patch by Zan Dobersek <zandobersek@gmail.com> on 2012-01-23
Reviewed by Martin Robinson.

Source/WebCore:

When the WEBKIT_TOP_LEVEL environment variable is set, resources
should be loaded from the source tree to which the variable is
pointing. This approach is used when performing testing on the
Gtk port.

No new tests, changes cause one test to pass.

* platform/graphics/gtk/ImageGtk.cpp:
(getPathToImageResource): Also make changes to the resource path
construction code on Windows.
(WebCore::Image::loadPlatformResource):

Tools:

WEBKIT_TOP_LEVEL environment variable is now set directly in either
WebKitTestRunner or DumpRenderTree through usage of a compilation-time
macro. This way both tools can be run outside the test harness without
the need to manually set the environment variable.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(getTopLevelPath):
* GNUmakefile.am:
* Scripts/webkitpy/layout_tests/port/gtk.py:
(GtkPort.setup_environ_for_server):
* WebKitTestRunner/GNUmakefile.am:
* WebKitTestRunner/InjectedBundle/gtk/InjectedBundleGtk.cpp:
(WTR::InjectedBundle::platformInitialize):

LayoutTests:

Unskip newly-passing editing test.

* platform/gtk/Skipped:

Canonical link: https://commits.webkit.org/93719@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105686 268f45cc-cd09-0410-ab3c-d52691b4dbfc