Tools/WebKitTestRunner/InjectedBundle/gtk/InjectedBundleGtk.cpp
@@ -44,6 +44,9 @@ void InjectedBundle::platformInitialize(WKTypeRef)
     // will cause tests to fail because of unexpected output. We squelch all debug
     // messages sent to the logger.
     g_log_set_default_handler(logHandler, 0);
+
+    if (!g_getenv("WEBKIT_TOP_LEVEL"))
+        g_setenv("WEBKIT_TOP_LEVEL", TOP_LEVEL_DIR, FALSE);
 }
 
 } // namespace WTR
